# MTAA_SELLIT_BACKEND

./: .dockerignore  .env.example  .flake8  .gitignore  Procfile  README.md  data.json  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  user.json
apps/api/: decorators.py  encoders.py  errors.py  response.py  urls.py
apps/api/filters/: api_key.py  category.py  city.py  message.py  offer.py
apps/api/forms/: api_key.py  category.py  city.py  expo_token.py  image.py  offer.py  user.py
apps/api/middleware/: exceptions.py
apps/api/serializers/: api_key.py  category.py  city.py  expo_token.py  image.py  location.py  message.py  offer.py  offer_chat.py  offer_chat_user.py  user.py
apps/api/views/: api_key.py  auth.py  base.py  category.py  chat.py  city.py  expo_token.py  image.py  offer.py  user.py
apps/chat/: apps.py  routing.py
apps/chat/consumers/: chat.py
apps/core/: auth.py
apps/core/checkers/: __init__.py  chat.py  image.py  message.py  offer.py  user.py
apps/core/migrations/: 0001_initial.py  0002_expotoken.py  0002_rename_psc_city_zip.py  0003_alter_expotoken_token.py  0003_location_offerchatusers_offerchat_message.py  0004_alter_offerchatusers_offer_chat.py  0004_offerchatuser_and_more.py  0005_offerchatuser_and_more.py
apps/core/models/: __init__.py  category.py  city.py  expo_token.py  image.py  location.py  message.py  offer.py  offer_chat.py  offer_chat_user.py  user.py
apps/core/querysets/: base.py
fixtures/: apikey.json  token.json
sellit_api/: asgi.py  celery.py  wsgi.py
sellit_api/settings/: base.py  development.py
