[tool.poetry]
name = "sellit_api"
version = "0.1.0"
description = "MTTA school project"
authors = ["Adam Jankinc", "Filip Brat"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
python-dotenv = "0.21.1"
argon2-cffi = "21.3.0"
sentry-sdk = "^1"
psycopg2-binary = "2.9.5"
porcupine-python = "0.5.0"
django-imap-backend = "0.2.3"
django-celery-beat = "2.5.0"
redis = "4.5.1"
django_api_forms = "1.0.0rc7"
django-filter = "22.1"
django-object-checker = "1.0.2"
amqp = "5.1.1"
argon2-cffi-bindings = "21.2.0"
asgiref = "3.6.0"
async-timeout = "4.0.2"
attrs = "22.2.0"
autobahn = "23.1.2"
automat = "22.10.0"
bcrypt = "4.0.1"
billiard = "3.6.4.0"
celery = "5.2.7"
certifi = "2022.12.7"
cffi = "1.15.1"
channels = "4.0.0"
click = "8.1.3"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.2.0"
constantly = "15.1.0"
cron-descriptor = "1.2.35"
cryptography = "39.0.2"
daphne = "4.0.0"
django-timezone-field = "5.0"
fabric = "2.7.1"
flake8 = "3.9.2"
hyperlink = "21.0.0"
idna = "3.4"
incremental = "22.10.0"
invoke = "1.7.3"
kombu = "5.2.4"
mccabe = "0.6.1"
paramiko = "3.1.0"
pathlib2 = "2.3.7.post1"
pillow = "9.4.0"
prompt-toolkit = "3.0.38"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycodestyle = "2.7.0"
pycparser = "2.21"
pydantic = "1.7.4"
pyflakes = "2.3.1"
pyopenssl = "23.1.0"
python-crontab = "2.7.1"
python-dateutil = "2.8.2"
pytz = "2022.7.1"
service-identity = "21.1.0"
six = "1.16.0"
sqlparse = "0.4.3"
twisted = "22.10.0"
txaio = "23.1.1"
typing-extensions = "4.5.0"
tzdata = "2022.7"
urllib3 = "1.26.15"
vine = "5.0.0"
wcwidth = "0.2.6"
zope-interface = "6.0"

[tool.poetry.dev-dependencies]
fabric = "^2.6.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
